--- a/src/templates/screens/Query.vm
+++ b/src/templates/screens/Query.vm
@@ -6,7 +6,7 @@
 	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>
 
 
-        <form action="$link.setPage("Search.vm")" method="GET">
+        <form action="$link.setPage("Search.vm")" method="get">
         <input type="hidden" name="nextTemplate" value="IssueList.vm" />
         <input type="hidden" name="action" value="Search" />
 	
@@ -15,8 +15,8 @@
 		<tr>
 		<td>
             <input type="submit" name="eventSubmit_doSearch" 
-                value="Search" class="button" />&#160;
-            <input type="reset" value="Reset" class="button" />
+                value="Search" />&#160;
+            <input type="reset" value="Reset" />
            $intake.declareGroups()
         </form>
         </td>
@@ -218,7 +218,7 @@
 			</select>
 			
 			<input type="text" size="25" class="text" value="" />
-			<div class="misc"><input type="submit" value="and" class="button" />&nbsp;<input type="submit" value="or" class="button" />&nbsp;<input type="submit" value="add additional boolean search" class="button" /></div>
+			<div class="misc"><input type="submit" value="and" />&nbsp;<input type="submit" value="or" />&nbsp;<input type="submit" value="add additional boolean search" /></div>
 		</td>
 		</tr>
 		
@@ -245,8 +245,8 @@
 		<tr>
 		<td>
             <input type="submit" name="eventSubmit_doSearch" 
-                value="Search" class="button" />&#160;
-            <input type="reset" value="Reset" class="button" />
+                value="Search" />&#160;
+            <input type="reset" value="Reset" />
         </td>
 		</tr>
 		</table>
