--- a/src/templates/screens/admin/AttributeShow.vm
+++ b/src/templates/screens/admin/AttributeShow.vm
@@ -25,7 +25,7 @@ This page is for editing the Attributes which are defined globally.
 
 <div class="datatable">
 
-<form action="$link.setPage("admin,AttributeShow.vm")" method="GET">
+<form action="$link.setPage("admin,AttributeShow.vm")" method="get">
     <input type="hidden" name="action" value="admin.ModifyAttributes">
     <input type="hidden" name="nextTemplate" value="admin,AttributeEdit.vm">
 
