--- a/src/templates/screens/admin/ModuleAttributeEditor.vm
+++ b/src/templates/screens/admin/ModuleAttributeEditor.vm
@@ -5,7 +5,7 @@ $page.setTitle("Attribute Editor")
 <p><b>Editing Module</b>: <i>$module.Name</i></p>
 <p>Modify Attributes<br>
 </p>
-<form action="$link.setPage("admin,ModuleAttributeEditor.vm")" method="GET">
+<form action="$link.setPage("admin,ModuleAttributeEditor.vm")" method="get">
     <input type="hidden" name="action" value="admin.ModifyModuleAttributes">
     <input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" 
             value="admin,ModuleAttributeEditor.vm">
