--- a/src/templates/screens/entry/Wizard1.vm
+++ b/src/templates/screens/entry/Wizard1.vm
@@ -11,7 +11,7 @@ $page.setTitle("Enter New Issue")
 <form name="ReportForm" method="get" action="$action">
 
 <p class="functnbar">
-<input type="submit" name="eventSubmit_doSubmitattributes" value="Next ->" />&#160;<input type="reset" value="reset" /></p>
+<input type="submit" name="eventSubmit_doSubmitattributes" value="next" />&#160;<input type="reset" value="reset" /></p>
 
 <h3>Input your issue</h3>
 
@@ -66,7 +66,7 @@ $page.setTitle("Enter New Issue")
 </div>
 
 <p class="functnbar">
-<input type="submit" name="eventSubmit_doSubmitattributes" value="Next ->" />&#160;<input type="reset" value="reset" /></p>
+<input type="submit" name="eventSubmit_doSubmitattributes" value="next" />&#160;<input type="reset" value="reset" /></p>
 $intake.declareGroups()
 </form>
 </div>
